关于我们添加版本号

--- a/mobile/src/main/res/layout/item_set_single_select.xml
+++ b/mobile/src/main/res/layout/item_set_single_select.xml
@@ -14,6 +14,7 @@
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="center_vertical|left"
+        android:singleLine="true"
         android:textColor="#de000000"
         android:textSize="16sp"
         tools:ignore="RtlHardcoded" />
