--- a/mobile/src/main/res/layout/content_set_theme.xml
+++ b/mobile/src/main/res/layout/content_set_theme.xml
@@ -59,5 +59,15 @@
             st:type="buttonB" />
 
         <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_skin_online"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="欢迎下载"
+            st:titleEx="在线皮肤"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
     </LinearLayout>
 </ScrollView>
