--- a/mobile/src/main/res/layout/content_set_persion.xml
+++ b/mobile/src/main/res/layout/content_set_persion.xml
@@ -19,5 +19,35 @@
             android:text="个人中心"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp" />
+
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_save_trip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="@string/set_yes"
+            st:summary2="@string/set_no"
+            st:titleEx="允许上传行程"
+            st:type="switchB" />
+
+        <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_my_trip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="我的行程"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:titleEx="退出登录"
+            st:type="buttonB" />
+
+        <View style="@style/Interval" />
+
     </LinearLayout>
 </ScrollView>
