--- a/mobile/src/main/res/layout/activity_radios.xml
+++ b/mobile/src/main/res/layout/activity_radios.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="horizontal"
-    tools:ignore="HardcodedText,SpUsage">
+    tools:ignore="HardcodedText,SpUsage,RtlHardcoded,RtlSymmetry">
 
     <FrameLayout
         android:layout_width="0dp"
@@ -21,8 +20,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:gravity="center"
-                android:text="我的收藏(右侧点击收藏)"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="15dp"
+                android:text="我的收藏(长按移除收藏)"
                 android:textSize="20dp" />
 
             <View
@@ -55,12 +55,29 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="电台列表"
-                android:textSize="20dp" />
+                android:layout_height="50dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical|left"
+                    android:paddingLeft="15dp"
+                    android:text="电台列表(长按收藏)"
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/tv_all"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:gravity="center_vertical|right"
+                    android:paddingRight="15dp"
+                    android:text="全部"
+                    android:textSize="16dp" />
+            </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
