部分设置添加

--- a/mobile/src/main/res/layout/content_set_driving.xml
+++ b/mobile/src/main/res/layout/content_set_driving.xml
@@ -31,6 +31,17 @@
         <View style="@style/Interval" />
 
         <com.wow.carlauncher.common.view.SetView
+            android:id="@+id/sv_driving_animation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            st:summary="@string/set_yes"
+            st:summary2="@string/set_no"
+            st:titleEx="驾驶界面启动动画"
+            st:type="switchB" />
+
+        <View style="@style/Interval" />
+
+        <com.wow.carlauncher.common.view.SetView
             android:id="@+id/sv_auto_to_driving"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
