--- a/mobile/src/main/res/layout/content_l_page.xml
+++ b/mobile/src/main/res/layout/content_l_page.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_base"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:id="@+id/ll_base"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="horizontal" />
-</FrameLayout>
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="horizontal" />
